{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 43,
  "lineage": "f25703ab-479f-4d60-a0e6-6b83b670c51c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-01d90d8259845db24",
            "domain": "vpc",
            "id": "eipalloc-921071a3",
            "network_border_group": "us-west-1",
            "network_interface": "eni-08ea8c57853db501d",
            "private_dns": "ip-10-0-10-71.us-west-1.compute.internal",
            "private_ip": "10.0.10.71",
            "public_dns": "ec2-13-52-162-64.us-west-1.compute.amazonaws.com",
            "public_ip": "13.52.162.64",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:543745842878:internet-gateway/igw-062d89de8d44589dd",
            "id": "igw-062d89de8d44589dd",
            "owner_id": "543745842878",
            "tags": {
              "Environment": "QA01",
              "Name": "QA01-igw"
            },
            "vpc_id": "vpc-0b86cf9c2fca819e7"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-921071a3",
            "id": "nat-0640255ad84cdc3f4",
            "network_interface_id": "eni-08ea8c57853db501d",
            "private_ip": "10.0.10.71",
            "public_ip": "13.52.162.64",
            "subnet_id": "subnet-00679ca9378e9afd0",
            "tags": {
              "Environment": "QA01",
              "Name": "QA01-NAT"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06dfa9fd987b380ed1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0640255ad84cdc3f4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06dfa9fd987b380ed",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-062d89de8d44589dd",
            "id": "r-rtb-09539506d029ee1b31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09539506d029ee1b3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06dfa9fd987b380ed",
            "owner_id": "543745842878",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0640255ad84cdc3f4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "QA01",
              "Name": "QA01-private-route-table"
            },
            "vpc_id": "vpc-0b86cf9c2fca819e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09539506d029ee1b3",
            "owner_id": "543745842878",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-062d89de8d44589dd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "QA01",
              "Name": "QA01-public-route-table"
            },
            "vpc_id": "vpc-0b86cf9c2fca819e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b2c779592b19c9f",
            "route_table_id": "rtb-06dfa9fd987b380ed",
            "subnet_id": "subnet-0b33691dce7efe11d"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058f7393937d75ed2",
            "route_table_id": "rtb-06dfa9fd987b380ed",
            "subnet_id": "subnet-03cf0a127a7f3c868"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050b55522d38127a3",
            "route_table_id": "rtb-06dfa9fd987b380ed",
            "subnet_id": "subnet-06c67661902c80fed"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2987f2e4f12d384",
            "route_table_id": "rtb-09539506d029ee1b3",
            "subnet_id": "subnet-00679ca9378e9afd0"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e18a46e6023fcc3",
            "route_table_id": "rtb-09539506d029ee1b3",
            "subnet_id": "subnet-0b15545a362ebebef"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5feb699d60c6446",
            "route_table_id": "rtb-09539506d029ee1b3",
            "subnet_id": "subnet-04f51da334f825a9d"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:543745842878:security-group/sg-00caeb7b5893efd96",
            "description": "Default security group to allow inbound/outbound from the VPC",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-00caeb7b5893efd96",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "QA01-default-sg",
            "name_prefix": "",
            "owner_id": "543745842878",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "QA01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b86cf9c2fca819e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:543745842878:subnet/subnet-0b33691dce7efe11d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.40.0/23",
            "id": "subnet-0b33691dce7efe11d",
            "map_public_ip_on_launch": false,
            "owner_id": "543745842878",
            "tags": {
              "Environment": "QA01",
              "Name": "QA01-us-west-1b-private-subnet"
            },
            "vpc_id": "vpc-0b86cf9c2fca819e7"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:543745842878:subnet/subnet-03cf0a127a7f3c868",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.50.0/23",
            "id": "subnet-03cf0a127a7f3c868",
            "map_public_ip_on_launch": false,
            "owner_id": "543745842878",
            "tags": {
              "Environment": "QA01",
              "Name": "QA01-us-west-1c-private-subnet"
            },
            "vpc_id": "vpc-0b86cf9c2fca819e7"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:543745842878:subnet/subnet-06c67661902c80fed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.60.0/23",
            "id": "subnet-06c67661902c80fed",
            "map_public_ip_on_launch": false,
            "owner_id": "543745842878",
            "tags": {
              "Environment": "QA01",
              "Name": "QA01-us-west-1b-private-subnet"
            },
            "vpc_id": "vpc-0b86cf9c2fca819e7"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:543745842878:subnet/subnet-00679ca9378e9afd0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.10.0/23",
            "id": "subnet-00679ca9378e9afd0",
            "map_public_ip_on_launch": true,
            "owner_id": "543745842878",
            "tags": {
              "Environment": "QA01",
              "Name": "QA01-us-west-1b-public-subnet"
            },
            "vpc_id": "vpc-0b86cf9c2fca819e7"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:543745842878:subnet/subnet-0b15545a362ebebef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.20.0/23",
            "id": "subnet-0b15545a362ebebef",
            "map_public_ip_on_launch": true,
            "owner_id": "543745842878",
            "tags": {
              "Environment": "QA01",
              "Name": "QA01-us-west-1c-public-subnet"
            },
            "vpc_id": "vpc-0b86cf9c2fca819e7"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:543745842878:subnet/subnet-04f51da334f825a9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.30.0/23",
            "id": "subnet-04f51da334f825a9d",
            "map_public_ip_on_launch": true,
            "owner_id": "543745842878",
            "tags": {
              "Environment": "QA01",
              "Name": "QA01-us-west-1b-public-subnet"
            },
            "vpc_id": "vpc-0b86cf9c2fca819e7"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:543745842878:vpc/vpc-0b86cf9c2fca819e7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-071545c2a4cbbeedb",
            "default_route_table_id": "rtb-0db8d9f493047a133",
            "default_security_group_id": "sg-08a4cd65be92d94aa",
            "dhcp_options_id": "dopt-0e8b22cc9bf4f9713",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b86cf9c2fca819e7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0db8d9f493047a133",
            "owner_id": "543745842878",
            "tags": {
              "Environment": "QA01",
              "Name": "QA01-vpc"
            }
          }
        }
      ]
    }
  ]
}